--- a/faucet.html
+++ b/faucet.html
@@ -72,7 +72,7 @@
     }
   </style>
 </head>
-<title>js-kit-demo</title>
+<title>Plasma ERC20 Faucet</title>
 
 <body>
   <div class="ui stackable grid container" style='padding: 50px 0;'>
