--- a/faucet.html
+++ b/faucet.html
@@ -78,95 +78,40 @@
   <div class="ui stackable grid container" style='padding: 50px 0;'>
     <div class='row'>
       <img src='./images/OmiseGO_Logo.svg' />
-      <button class="ui primary button create-wallet" onclick="newWallet()">Create new Wallet</button>
+    </div>
+    <div class='row'>
+      <div id="faucetAddressArea" class="address-area ui segment" style="display:block; width: 100%;">
+        <h2>Faucet Address</h2>
+        <div>
+          <button class="ui primary button" onclick="showFaucetBalance()">Refresh balances</button>
+        </div>
+        <h4>Rootchain balance</h4>
+        <div id="faucetRootchainBalance" class="balance"></div>
+        <h4>Childchain balance</h4>
+        <div id="faucetChildchainBalance" class="balance"></div>
+      </div>
     </div>
     <div id="walletArea" class="wallet-area ui segment" style='width: 100%'>
       <div class='row'>
-        <button class="ui primary button" onclick="restoreSeed()">Restore from seed</button>
         <div class='ui input'>
-          <input type="text" id="seed" value="" size="80" placeholder='your seed phase...'></input>
+          <input type="text" id="seed" value="" size="80" placeholder='your Ethereum address'></input>
         </div>
+        <button class="ui primary button" onclick="restoreSeed()">Load Address</button>
       </div>
       <div>
       </div>
     </div>
     <div class='row'>
       <div id="addressArea" class="address-area ui segment" style="display:none; width: 100%;">
-        <h2>Addresses</h2>
+        <h2>Recipient Address</h2>
         <div>
-          <button class="ui primary button" onclick="newAddress('')">Generate new address</button>
+          <button class="ui primary button" onclick="claimTokens()">Claim tokens from faucet</button>
           <button class="ui primary button" onclick="showBalances()">Refresh balances</button>
         </div>
         <h4>Rootchain balance</h4>
         <div id="rootchainBalance" class="balance"></div>
         <h4>Childchain balance</h4>
         <div id="childchainBalance" class="balance"></div>
-      </div>
-    </div>
-    <div class='row'>
-      <div id="functionArea" class="function-area grid container" style="display:none; width: 100%;">
-        <div class='fn-container'>
-          <div class='ui segment'>
-            <h2>Deposit</h2>
-            <div class="ui form">
-              <div class="field">
-                <label>From address:</label>
-                <input type="text" id="depositFromAddress"></input>
-              </div>
-              <div class="field">
-                <label>Token contract address (blank for ETH):</label>
-                <input type="text" id="depositContractAddress" value=""></input>
-              </div>
-              <div class="field">
-                <label>Value (wei):</label>
-                <div class="ui right labeled input">
-                  <input type="text" id="depositValue">
-                  <div class="ui basic label">
-                    wei
-                  </div>
-                </div>
-              </div>
-              <button class="ui primary button" onclick="deposit()">Send</button>
-            </div>
-          </div>
-          <div class='ui segment'>
-            <h2>Transfer</h2>
-            <div class="ui form">
-              <div class="field">
-                <label>From address:</label>
-                <input type="text" id="transferFromAddress"></input>
-              </div>
-              <div class="field">
-                <label>To address:</label>
-                <input type="text" id="transferToAddress">
-              </div>
-              <div class="field">
-                <label>Token contract address (blank for ETH):</label>
-                <input type="text" id="transferContractAddress" value=""></input>
-              </div>
-              <div class="field">
-                <label>Value (wei):</label>
-                <div class="ui right labeled input">
-                  <input type="text" id="transferValue">
-                  <div class="ui basic label">
-                    wei
-                  </div>
-                </div>
-              </div>
-              <button class="ui primary button" onclick="childchainTransfer()">Send</button>
-            </div>
-          </div>
-          <div class='ui segment'>
-            <h2>Exit</h2>
-            <div class="ui form">
-              <div class="field">
-                <label>From address:</label>
-                <input type="text" id="exitFromAddress"></input>
-              </div>
-              <button class="ui primary button" onclick="startStandardExit()">Exit</button>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
