--- a/faucet.html
+++ b/faucet.html
@@ -74,7 +74,7 @@
 </head>
 <title>Plasma ERC20 Faucet</title>
 
-<body onload="loadFaucetVault()">
+<body onload="createVault()">
   <div class="ui stackable grid container" style='padding: 50px 0;'>
     <div class='row'>
       <img src='./images/OmiseGO_Logo.svg' />
