--- a/tokenring.html
+++ b/tokenring.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="./src/dist/bignumber.min.js"></script>
   <script type="text/javascript" src="./src/omg-wallet.js"></script>
   <script type="text/javascript" src="./src/plasma-faucet.js"></script>
+  <script type="text/javascript" src="./src/token-ring.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
   <script src="./src/semantic/semantic.min.js"></script>
