--- a/tokenring.html
+++ b/tokenring.html
@@ -73,7 +73,7 @@
     }
   </style>
 </head>
-<title>Plasma ERC20 Faucet</title>
+<title>Plasma ERC20 Token Ring</title>
 
 <body onload="createRingVault()">
   <div class="ui stackable grid container" style='padding: 50px 0;'>
@@ -81,41 +81,28 @@
       <img src='./images/OmiseGO_Logo.svg' />
     </div>
     <div class='row'>
-      <div id="faucetAddressArea" class="address-area ui segment" style="display:block; width: 100%;">
-        <h2>Faucet Address</h2>
-        <div>
-          <button class="ui primary button" onclick="showFaucetBalance()">Refresh balances</button>
+      <div id="RingAddressArea" class="address-area ui segment" style="display:block; width: 100%;">
+        <h2>Token Ring Addresses</h2>
+        <div id="rotateButton">
+          <button class="ui primary button" onclick="rotateTokens()">Rotate Tokens</button>
+          <button class="ui primary button" onclick="redistributeTokens()">Redistribute Tokens</button>
+          <button class="ui primary button" onclick="redistributeEth()">Redistribute ETH</button>
+          <button class="ui primary button" onclick="showRingBalances()">Refresh Balances</button>
         </div>
-        <h4>Faucet Token Contract</h4>
-        <div id="faucetTokenContractAddress" class="balance"></div>
-        <h4>Rootchain balance</h4>
-        <div id="faucetRootchainBalance" class="balance"></div>
-        <h4>Childchain balance</h4>
-        <div id="faucetChildchainBalance" class="balance"></div>
+        <h4>Token Ring Token Contract</h4>
+        <div id="RingTokenContractAddress" class="balance"></div>
+        <h4>Childchain Balances</h4>
+        <div id="RingChildchainBalance" class="balance"></div>
       </div>
     </div>
-    <div id="walletArea" class="wallet-area ui segment" style='width: 100%'>
-      <div class='row'>
-        <div class='ui input'>
-          <input type="text" id="recipientAddress" value="" size="80" placeholder='your Ethereum address'></input>
-        </div>
-        <button class="ui primary button" onclick="loadAddress()">Load Address</button>
-      </div>
-      <div>
-      </div>
-    </div>
-    <div class='row'>
-      <div id="addressArea" class="address-area ui segment" style="display:none; width: 100%;">
-        <h2>Recipient Address</h2>
-        <div>
-          <button class="ui primary button" onclick="claimTokens()">Claim tokens from faucet</button>
-          <button class="ui primary button" onclick="showBalance()">Refresh balances</button>
-        </div>
-        <h4>Rootchain balance</h4>
-        <div id="rootchainBalance" class="balance"></div>
-        <h4>Childchain balance</h4>
-        <div id="childchainBalance" class="balance"></div>
-      </div>
+    <div id="LogArea" class="address-area ui segment" style="display:block; width: 100%;">
+      <button class="ui primary button" onclick="clearLogs()">Clear Logs</button>
+      <h4>Current State</h4>
+      <div id="CurrentState" class="balance">Not running...</div>
+      <h4>Transaction Submission Logs</h4>
+      <div id="TxSubmissionLog" class="balance"></div>
+      <h4>Transaction Creation Logs</h4>
+      <div id="TxCreationLog" class="balance"></div>
     </div>
   </div>
 </body>
