--- a/tokenring.html
+++ b/tokenring.html
@@ -78,7 +78,7 @@
 <body onload="createRingVault()">
   <div class="ui stackable grid container" style='padding: 50px 0;'>
     <div class='row'>
-      <img src='./images/OmiseGO_Logo.svg' />
+      <img src='./images/OmiseGO_Jetcoins.png' width='304' height='36' />
     </div>
     <div class='row'>
       <div id="RingAddressArea" class="address-area ui segment" style="display:block; width: 100%;">
