Moved shared functions to separate JS file

--- a/tokenring.html
+++ b/tokenring.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="./src/dist/hooked-web3-provider.js"></script>
   <script type="text/javascript" src="./src/dist/bignumber.min.js"></script>
   <script type="text/javascript" src="./src/omg-wallet.js"></script>
-  <script type="text/javascript" src="./src/plasma-faucet.js"></script>
+  <script type="text/javascript" src="./src/plasma-tools.js"></script>
   <script type="text/javascript" src="./src/token-ring.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
