Added UTXO Details

--- a/viewTXO.html
+++ b/viewTXO.html
@@ -105,7 +105,7 @@
         <h4>Address</h4>
         <div id="utxoAddress" class="balance"></div>
         <h4>UTXO Details</h4>
-        <div id="utxoDetails" class="balance">UTXO Details still to be implemented...</div>
+        <div id="utxoDetails" class="balance"></div>
       </div>
     </div>
   </div>
