--- a/mergeandexit.html
+++ b/mergeandexit.html
@@ -95,11 +95,20 @@
     <div class='row'>
       <div id="addressArea" class="address-area ui segment" style="display:none; width: 100%;">
         <h2>Addresses</h2>
+        <h4>ERC-20 Tokens</h4>
         <div>
-          <button class="ui primary button" onclick="mergeAllUTXOs()" style="width: 210px">Merge UTXOs In Place</button>
-          <button class="ui primary button" onclick="mergeAddresses()" style="width: 210px">Merge to First Address</button>
-          <button class="ui primary button" onclick="exitAddress()" style="width: 210px">Exit First Address</button>
-          <button class="ui primary button" onclick="mergeFirstUTXOs()" style="width: 210px">Merge 1st Address UTXOs</button>
+          <button class="ui primary button" onclick="mergeAllTokenUTXOs()" style="width: 210px">Merge UTXOs In Place</button>
+          <button class="ui primary button" onclick="mergeTokenAddresses()" style="width: 210px">Move to First Address</button>
+          <button class="ui primary button" onclick="mergeFirstTokenUTXOs()" style="width: 210px">Merge 1st Address UTXOs</button>
+          <button class="ui primary button" onclick="exitTokens()" style="width: 210px">Exit First Address</button>
+          <button class="ui primary button" onclick="showAddresses()" style="width: 210px">Refresh balances</button>
+        </div>
+        <h4>ETH</h4>
+        <div>
+          <button class="ui primary button" onclick="mergeAllEthUTXOs()" style="width: 210px">Merge UTXOs In Place</button>
+          <button class="ui primary button" onclick="mergeEthAddresses()" style="width: 210px">Move to First Address</button>
+          <button class="ui primary button" onclick="mergeFirstEthUTXOs()" style="width: 210px">Merge 1st Address UTXOs</button>
+          <button class="ui primary button" onclick="exitEth()" style="width: 210px">Exit First Address</button>
           <button class="ui primary button" onclick="showAddresses()" style="width: 210px">Refresh balances</button>
         </div>
         <h4>Childchain Balances</h4>
